fixed component Checkout

--- a/src/styles/components/_Checkout.scss
+++ b/src/styles/components/_Checkout.scss
@@ -27,6 +27,7 @@
   align-items: center;
   width: 100%;
   border-bottom: 1px solid #eee;
+  line-height: 3rem;
 }
 .Checkout-element h4 {
   margin: 0;
